background attachment fixed on ios

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@ body {
 	margin: 0;
 }
 #root {
-	min-height: 100vh;
+	height: 100%;
 }
 h1,
 h3,
@@ -100,7 +100,7 @@ input {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 }
 .footer {
@@ -1556,6 +1556,7 @@ input::placeholder {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	border-radius: .1rem;
 }
 
 .container-ads {
